--- a/valentine.html
+++ b/valentine.html
@@ -103,7 +103,7 @@
 
     <h1>My Beautiful [Wifee] ❤️</h1>
 
-    <h2>We Met on 1st February 2024 💖</h2>
+    <h2>1st February 2024 Jab we met 💖</h2>
 
     <div id="timer"></div>
 
